--- a/23colouredearth.html
+++ b/23colouredearth.html
@@ -52,7 +52,7 @@
                     awareness, attract tourists, and showcase the artistic and technical capabilities of aerial
                     photography. Additionally, digital content will be created for online platforms to reach a broader
                     audience. By blending technology with nature, this project not only aims to document but also to
-                    inspire appreciation and conservation of one of Mauritius’s most remarkable natural wonders.
+                    inspire appreciation and conservation of one of Mauritius's most remarkable natural wonders.
                 </p>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 ">
@@ -83,8 +83,8 @@
 
     </div>
     <div class="container pro-button">
-        <div class="project inter">
-            <a href="#">View other projects</a>
+        <div class="text-center">
+            <a href="#" class="inter project mx-auto">View other projects</a>
         </div>
     </div>
     <!-- Footer  -->
