--- a/abovehorizon.html
+++ b/abovehorizon.html
@@ -44,11 +44,11 @@
         <h2 class="title">Above Horizon</h2>
         <div class="row para">
             <div class="col-lg-8 col-md-8 col-sm-12 blue">
-                <p>Above Horizon graduation showcase is inspired from the travel theme ‘’An airport experience’’ and
+                <p>Above Horizon graduation showcase is inspired from the travel theme "An airport experience" and
                     puzzles. The purpose was to show the connectivity between all the students (puzzles) while being on
                     a Creative Journey at the same time. The travelling theme is inspired by the long design journey of
                     each students where they are taking the visitors on a creative journey along with them through their
-                    creative works, which explains the theme ‘’An airport experience’’. It also gives the essence of
+                    creative works, which explains the theme "An airport experience". It also gives the essence of
                     meeting student from many places of the world joining together as creative persons to exhibit their
                     designs. In an airport experience, you are about to travel in the sky admiring the beauties below.
                     The name "Above horizons" is meant to be the sky which symbolises vast/infinite freedom. it reflects
@@ -95,8 +95,8 @@
         </div>
     </div>
     <div class="container pro-button">
-        <div class="project inter">
-            <a href="#">View other projects</a>
+        <div class="text-center">
+            <a href="#" class="inter project mx-auto">View other projects</a>
         </div>
     </div>
     <!-- Footer  -->
