--- a/lazeez.html
+++ b/lazeez.html
@@ -44,7 +44,7 @@
         <h2 class="title">Lazeez</h2>
         <div class="row para">
             <div class="col-lg-8 col-md-8 col-sm-12 blue">
-                <p>"Lazeez Biryani” embodies the essence of a local culinary haven, blending the rich flavours of Arab
+                <p>"Lazeez Biryani" embodies the essence of a local culinary haven, blending the rich flavours of Arab
                     and Indian heritage into every bite. The brand identity is a celebration of this cultural fusion, a
                     homage to the intricate tapestry of tastes that define our cuisine. At the heart of the brand lies
                     the name 'LAZEEZ,' resonating with the promise of deliciousness, pleasure, and flavour adventure,
