--- a/photodocu.html
+++ b/photodocu.html
@@ -90,8 +90,8 @@
         
     </div>
     <div class="container pro-button">
-        <div class="project inter">
-            <a href="#">View other projects</a>
+        <div class="text-center">
+            <a href="#" class="inter project mx-auto">View other projects</a>
         </div>
     </div>
     <!-- Footer  -->
