--- a/xiaomis1active.html
+++ b/xiaomis1active.html
@@ -46,10 +46,10 @@
             <div class="col-lg-8 col-md-8 col-sm-12 blue">
                 <p>This personal design project is based on the concept of a fusion of sports and a playful atmosphere,
                     aiming to make sports feel like a fun, engaging experience while simultaneously promoting the Xiaomi
-                    smartwatch. My approach was to seamlessly blend this vibrant energy with Xiaomi’s brand identity
+                    smartwatch. My approach was to seamlessly blend this vibrant energy with Xiaomi's brand identity
                     capturing its flowing, zen-like minimalism, while ensuring the visuals are eye-catching and
                     memorable. The result is a design that not only resonates with the target audience but also stays
-                    true to Xiaomi’s signature aesthetic.
+                    true to Xiaomi's signature aesthetic.
                 </p>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 ">
@@ -111,8 +111,8 @@
         </div>
     </div>
     <div class="container pro-button">
-        <div class="project inter">
-            <a href="#">View other projects</a>
+        <div class="text-center">
+            <a href="#" class="inter project mx-auto">View other projects</a>
         </div>
     </div>
     <!-- Footer  -->
