--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           </div>
         </div>
         <h2 class="hire inter">
-          <p>Hire me</p>
+          <p><a href="./services.html" class="text-decoration-none">Hire me</a></p>
         </h2>
       </div>
     </section>
