--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-    <link rel="stylesheet" href="assets/css/style.css?v=1" />
+    <link rel="stylesheet" href="assets/css/style.css?v=2" />
     <!-- Font Awesome for Social Media Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>Home-Page</title>
@@ -238,6 +238,17 @@
                 </div>
               </div>
             </div>
+            <div class="carousel-item">
+              <div class="d-flex flex-column align-items-center justify-content-center">
+                <div class="carousel-content col-lg-5 col-md-6 col-sm-8 ">
+                  <p class="carousel-para">"The recent job undertaken by Suhayl for our organisation has been largely
+                    satisfactory and beyond expectation. All stakeholders were very impressed and confirmed their
+                    intention for a continued and fruitful cooperation in the future." </p>
+                  <h2 class="tag-head">Humaid Damaree</h2>
+                  <p class="tagline">Senior Accountant at Masjid-an-Nabawi</p>
+                </div>
+              </div>
+            </div>
           </div>
           <!-- controls -->
           <button class="carousel-control-prev" type="button" data-bs-target="#customCarousel" data-bs-slide="prev">
@@ -291,7 +302,7 @@
           <a href="https://www.linkedin.com/in/suhayl-tarsoo-a24158269/" target="_blank">LinkedIn</a>
           <a href="https://wa.link/f9imx9" target="_blank">Whatsapp</a>
           <a href="#">suhayltarsoo©2024</a>
-      </div>
+        </div>
       </div>
     </footer>
     <!-- dropdown -->
@@ -361,7 +372,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"></script>
-    <script src="./assets/js/script.js?v=1"></script>
+    <script src="./assets/js/script.js?v=2"></script>
   </body>
 
 </html>
