--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
             crossorigin="anonymous" />
-        <link rel="stylesheet" href="assets/css/style.css?v=1" />
+        <link rel="stylesheet" href="assets/css/style.css?v=2" />
         <!-- Font Awesome for Social Media Icons -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
         <title>Services</title>
@@ -92,11 +92,13 @@
                                 <div class="card-bottom px-4">
                                     <h2 class="suitable">File format</h2>
                                     <p class="card-para">Receive your files in AI (Vector), PNG, JPEG & PDF</p>
-                                    <a class="card-link orange" href="">View Projects</a>
-                                    <a class="card-link purple" href="">Make it happen </a>
+                                    <a class="card-link orange" href="#" onclick="openMenu(event)">View Projects</a>
+                                    <a class="card-link purple" href="https://forms.gle/WxcTz34NnMABhmBd9"
+                                        target="_blank">Make it happen </a>
                                     <p class="custom para-sm card-para-sm">A custom package may be curated to your
                                         specific needs.</p>
-                                    <a class="card-link green" href="">Quick WhatsApp Inquire</a>
+                                    <a class="card-link green" href="https://wa.link/f9imx9" target="_blank">Quick
+                                        WhatsApp Inquire</a>
                                     <p class="card-para-sm para-sm">You have some questions? Make a quick WhatsApp
                                         Inquire </p>
                                 </div>
@@ -152,11 +154,13 @@
                                 <div class="card-bottom px-4">
                                     <h2 class="suitable">File format</h2>
                                     <p class="card-para">Receive your files in AI (Vector), PNG, JPEG & PDF</p>
-                                    <a class="card-link orange" href="">View Projects</a>
-                                    <a class="card-link purple" href="">Make it happen </a>
+                                    <a class="card-link orange" href="#" onclick="openMenu(event)">View Projects</a>
+                                    <a class="card-link purple" href="https://forms.gle/WxcTz34NnMABhmBd9"
+                                        target="_blank">Make it happen </a>
                                     <p class="custom para-sm card-para-sm">A custom package may be curated to your
                                         specific needs. </p>
-                                    <a class="card-link green" href="">Quick WhatsApp Inquire</a>
+                                    <a class="card-link green" href="https://wa.link/f9imx9" target="_blank">Quick
+                                        WhatsApp Inquire</a>
                                     <p class="card-para-sm para-sm">You have some questions? Make a quick WhatsApp
                                         Inquire </p>
                                 </div>
@@ -211,11 +215,13 @@
                                 <div class="card-bottom px-4">
                                     <h2 class="suitable">File format</h2>
                                     <p class="card-para">Receive your files in AI (Vector), PNG, JPEG & PDF</p>
-                                    <a class="card-link orange" href="">View Projects</a>
-                                    <a class="card-link purple" href="">Make it happen </a>
+                                    <a class="card-link orange" href="#" onclick="openMenu(event)">View Projects</a>
+                                    <a class="card-link purple" href="https://forms.gle/WxcTz34NnMABhmBd9"
+                                        target="_blank">Make it happen </a>
                                     <p class="custom para-sm card-para-sm">A custom package may be curated to your
                                         specific needs.</p>
-                                    <a class="card-link green" href="">Quick WhatsApp Inquire</a>
+                                    <a class="card-link green" href="https://wa.link/f9imx9" target="_blank">Quick
+                                        WhatsApp Inquire</a>
                                     <p class="card-para-sm para-sm">You have some questions? Make a quick WhatsApp
                                         Inquire </p>
                                 </div>
@@ -275,10 +281,11 @@
                                     </div>
                                 </div>
                                 <div class="card-bottom px-4">
-                                    <a class="card-link orange" href="">View Projects</a>
-                                    <a class="card-link orange" href="">Make it happen </a>
+                                    <a class="card-link orange" href="#" onclick="openMenu(event)">View Projects</a>
+                                    <a class="card-link orange" href="https://forms.gle/WxcTz34NnMABhmBd9" target="_blank">Make it happen </a>
                                     <p class="custom para-sm card-para-sm"></p>
-                                    <a class="card-link green" href="">Quick WhatsApp Inquire</a>
+                                    <a class="card-link green" href="https://wa.link/f9imx9" target="_blank">Quick
+                                        WhatsApp Inquire</a>
                                     <p class="card-para-sm para-sm p-color">In a hurry? Make a quick Whatsapp Inquire
                                         for faster reply </p>
                                 </div>
@@ -380,7 +387,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
-        <script src="./assets/js/script.js?v=1"></script>
+        <script src="./assets/js/script.js?v=2"></script>
     </body>
 
 </html>
