--- a/xiaomis1active.html
+++ b/xiaomis1active.html
@@ -7,7 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
             crossorigin="anonymous" />
-        <link rel="stylesheet" href="assets/css/style.css?v=1" />
+        <link rel="stylesheet" href="assets/css/style.css?v=2" />
         <!-- Font Awesome for Social Media Icons -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
         <title>Xiaomi-S1-active</title>
@@ -102,7 +102,7 @@
         </div>
         <div class="container pro-button">
             <div class="text-center">
-                <a href="#" class="inter project mx-auto">View other projects</a>
+                <a href="#" class="inter project mx-auto" onclick="openMenu(event)">View other projects</a>
             </div>
         </div>
         <!-- Footer  -->
@@ -198,7 +198,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
-        <script src="./assets/js/script.js?v=1"></script>
+        <script src="./assets/js/script.js?v=2"></script>
     </body>
 
 </html>
