--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
             crossorigin="anonymous" />
-        <link rel="stylesheet" href="assets/css/style.css?v=2" />
+        <link rel="stylesheet" href="assets/css/style.css?v=3" />
         <!-- Font Awesome for Social Media Icons -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
         <title>Services</title>
@@ -182,8 +182,9 @@
                                             other visual elements, this package covers it all. We provide everything
                                             your business needs to stand out and make a lasting impression. </p>
                                         <h2 class="suitable">Suitable For</h2>
-                                        <p class="card-para para-pad">Quick branding solution for Start-ups, Shops,
-                                            Small Events, E-commerce, Personal</p>
+                                        <p class="card-para para-pad">All type of businesses, Rebranding, Level up your
+                                            existing business and stand out from competitors, Starting a professional
+                                            business</p>
                                         <h2 class="rupees pt-4">Let's Talk</h2>
                                         <p class=" para-sm">20% Down Payment</p>
                                         <hr class="line">
@@ -282,7 +283,8 @@
                                 </div>
                                 <div class="card-bottom px-4">
                                     <a class="card-link orange" href="#" onclick="openMenu(event)">View Projects</a>
-                                    <a class="card-link orange" href="https://forms.gle/WxcTz34NnMABhmBd9" target="_blank">Make it happen </a>
+                                    <a class="card-link orange" href="https://forms.gle/WxcTz34NnMABhmBd9"
+                                        target="_blank">Make it happen </a>
                                     <p class="custom para-sm card-para-sm"></p>
                                     <a class="card-link green" href="https://wa.link/f9imx9" target="_blank">Quick
                                         WhatsApp Inquire</a>
@@ -387,7 +389,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
-        <script src="./assets/js/script.js?v=2"></script>
+        <script src="./assets/js/script.js?v=3"></script>
     </body>
 
 </html>
